Adicionada submissão 2.0 da 7a semana

--- a/7a semana/pug/layout.pug
+++ b/7a semana/pug/layout.pug
@@ -5,5 +5,7 @@ html
         meta(charset="utf-8")
         meta(name="viewport" content="width=device-width, initial-scale=1")
         link(rel="stylesheet", href="/w3.css")
+        script(src="/jquery-3.3.1.min.js")
+        script(src="/myscript.js")
     body
         block corpo
