--- a/7a semana/pug/form-upload.pug
+++ b/7a semana/pug/form-upload.pug
@@ -6,29 +6,17 @@ block corpo
             header.w3-container.w3-teal
                     h3 File Upload Tool
             .w3-container
-                form.w3-container(action='/processaForm' method='POST' enctype='multipart/form-data')
+                form#form.w3-container(action='/processaForm' method='POST' enctype='multipart/form-data')
                     label.w3-teal.w3-margin
                         b File
                     input.w3-input.w3-border.w3-light-grey.w3-margin(type='file' name='file')
                     label.w3-teal.w3-margi
                         b Description
                     input.w3-input.w3-border.w3-light-grey.w3-margin(type='text' name='description')
-                    input.w3-btn.w3-blue-grey.w3-margin(type='submit' value='Upload')
-        .w3-card-4
-            header.w3-container.w3-teal
-                h3 File list
-            .w3-container
-                table.w3-section.w3-table-all
-                    tr
-                        th File
-                        td Description
-                        td Upload date
-                    each file in catalog
-                        tr
-                            td
-                                a(href="/file/"+file.name)= file.name
-                            td= file.description
-                            td= file.update
-            footer.w3-container.w3-teal.w3-padding
-                address Gerado por FormApp
+                    input.w3-btn.w3-blue-grey.w3-margin#upload(type='submit' value='Upload')
+                    input.w3-btn.w3-blue-grey.w3-margin#reset(type='reset' value='Reset')
+                p#upsuccess
+        .w3-card-4#file-list
+        footer.w3-container.w3-teal.w3-padding
+            address Gerado por FormApp
             
